# Drill-Cam

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  setup.sh  setup_windows.bat
drillcam/: __init__.py  main.py
drillcam/config/: __init__.py  camera_modes.py  settings.py
drillcam/core/: __init__.py  camera_controller.py  frame_buffer.py  playback_engine.py  recording_engine.py
drillcam/processing/: __init__.py  enhancement.py  measurement.py  motion_tracker.py
drillcam/ui/: __init__.py  analysis_widget.py  controls_panel.py  main_window.py  media_browser.py  playback_widget.py  preview_widget.py
drillcam/ui/dialogs/: __init__.py  progress_dialog.py
drillcam/utils/: __init__.py  thumbnails.py  video_io.py
drillcam/workers/: __init__.py  capture_worker.py
