[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drillcam"
version = "0.1.0"
description = "High-speed camera application for monitoring drilling conditions"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "picamera2>=0.3.12",
    "opencv-python>=4.8.0",
    "PySide6>=6.5.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.2.0",
]

[project.scripts]
drillcam = "drillcam.main:main"

[tool.setuptools.packages.find]
where = ["."]
